<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/exe_card"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#88DFDF"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exe_car_relative_layout"
        android:padding="16dp" >


        <TextView
            android:id="@+id/exe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/exercise_name_res"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exe_attributes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textview_res"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exe_name" />

        <TextView
            android:id="@+id/exe_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exe_weight_res"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.cardview.widget.CardView>